test/runnable/extra-files/lib13774b.d
module lib13774b;
import lib13774a;

void use2()
{
    comdef();
}
