test/fail_compilation/test2830b.d
module test2830b;

import imports.test2830b;

void foo()
{
    TestUnion u;
}
